@@ -3,7 +3,6 @@ package org.monarchinitiative.fenominal.core.textmapper;
 import org.monarchinitiative.fenominal.core.corenlp.MappedSentencePart;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 
 public class TextMapperUtil {
@@ -12,7 +11,7 @@ public class TextMapperUtil {
         // we should be guaranteed to have at least one list entry -- TODO do we need to check?
         MappedSentencePart max = candidatesAtPositionI.get(0);
         for (int i = 1; i < candidatesAtPositionI.size(); i++) {
-            if (candidatesAtPositionI.get(i).getEndpos() > max.getEndpos()) {
+            if (candidatesAtPositionI.get(i).getEnd() > max.getEnd()) {
                 max = candidatesAtPositionI.get(i);
             }
         }
@@ -20,8 +19,8 @@ public class TextMapperUtil {
     }
 
     public static List<String> kmers(String token, int k) {
-        if (token.length() <= k) {
-            return Arrays.asList(new String[]{token});
+        if (token.length() <= k) { // cannot extract kmers sice String is not more than k characters
+            return List.of(token);
         }
         List<String> list = new ArrayList<>();
         for (int i = 0; i < token.length() - k + 1; i++) {
